--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -20,6 +20,9 @@
   <div class="form-group">
     <%= f.text_area :blog_entry, class: "form-control", placeholder: "Blog Content" %>
   </div>
+  <div class="form-group cant-see-me">
+    <%= f.number_field :user_id, value: current_user.id %>
+  </div>
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
   </div>
