--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -16,7 +16,12 @@
 
 @import "bootstrap";
 @import "bootstrap-sprockets";
+@import "font-awesome";
 
 .cant-see-me {
 	display: none;
+}
+
+#center-it {
+	text-align: center;
 }
