--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -22,6 +22,6 @@
     <%= f.number_field :user_id, value: current_user.id %>
   </div>
   <div class="actions">
-    <%= f.submit, class: "btn btn-primary" %>
+    <%= f.submit %>
   </div>
 <% end %>
