--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -17,6 +17,10 @@
   <div class="form-group">
     <%= f.text_field :author, class: "form-control", placeholder: "Author Name" %>
   </div>
+  <div class="field form-group">
+    <%= f.label "Photo" %><br>
+    <%= f.file_field :avatar %>
+  </div>
   <div class="form-group">
     <%= f.text_area :blog_entry, class: "form-control", placeholder: "Blog Content" %>
   </div>
