--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,11 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :username %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.text_field :username %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
