--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,37 +20,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <%= link_to "Home", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
+        <li><%= link_to "Archive", archive_path %></li>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-        	Welcome<% current_user.email %>!<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-        <% end %>
+        <% if user_signed_in? %> 
+        	<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+        	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+       	<% else %>
+       		<li><%= link_to "Log In", new_user_session_path %></li>
+     	<% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -66,7 +52,55 @@
   </div><!-- /.container-fluid -->
 </nav>
 <%= yield %>
-</div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  </body>
+</html>
+
+  <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <div class="container">
+      <div class="navbar-text">
+        <a href="https://instagram.com/leila.jacob/" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-instagram fa-stack-1x"></i>
+        </span>
+        <a href="https://www.pinterest.com/asganymede/" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-pinterest fa-stack-1x"></i>
+        </span>
+        <a href="https://twitter.com/leila_jacob" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </span>
+        <a href="https://www.youtube.com/channel/UCdU1vd_pVw83Yec1FfdgTyQ?view_as=public" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-youtube fa-stack-1x"></i>
+        </span>
+        <a href="http://leilajacob.deviantart.com/" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-deviantart fa-stack-1x"></i>
+        </span>
+        <a href="http://rosalindasganymede.tumblr.com/" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-tumblr fa-stack-1x"></i>
+        </span>
+        <a href="https://github.com/leilajacob" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-github-square fa-stack-1x"></i>
+        </span>
+        <!-- <a href=""><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-slack fa-stack-1x"></i>
+        </span> -->
+        <a href="https://www.linkedin.com/profile/view?id=AAMAABWcluUB2lmuExk-XtJMBws1Y2c-i4gW9sw&trk=hp-identity-name" target="_blank"><span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </span>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
