--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -5,11 +5,33 @@
 <div class="container">
   <div class="well">
     <% @blog_posts.each do |post| %>
-    <%= blog_post.title %>
-    <%= image_tag @blog_post.avatar.url(:medium), class: "img-responsive" %>
+    <%= image_tag post.avatar.url(:medium) %>
   </div>
-  <% end %>
+  
+  <!-- Button trigger modal -->
+	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+	  View
+	</button>
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title" id="myModalLabel"><%= post.title %></h4>
+	      </div>
+	      <div class="modal-body">
+	        <%= image_tag post.avatar.url %>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	<% end %>
 </div>
 
 
-<%= link_to 'New Blog post', new_blog_post_path %>
