--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -22,11 +22,13 @@
 	        <h4 class="modal-title" id="myModalLabel"><%= post.title %></h4>
 	      </div>
 	      <div class="modal-body">
-	        <%= image_tag post.avatar.url %>
+	        <%= image_tag post.avatar.url(:medium) %>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 	        <button type="button" class="btn btn-primary">Save changes</button>
+	        
+
 	      </div>
 	    </div>
 	  </div>
