--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -3,37 +3,13 @@
 <h1>Archive</h1>
 
 <div class="container">
-  <div class="well">
-    <% @blog_posts.each do |post| %>
-    <%= image_tag post.avatar.url(:medium) %>
-  </div>
-  
-  <!-- Button trigger modal -->
-	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-	  View
-	</button>
-
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel"><%= post.title %></h4>
-	      </div>
-	      <div class="modal-body">
-	        <%= image_tag post.avatar.url(:medium) %>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
-	        
-
-	      </div>
-	    </div>
-	  </div>
-	</div>
+	<div class="well center-it">
+	<% @blog_posts.each do |post| %>
+		<%= link_to post do %>
+		<%= image_tag post.avatar.url(:medium) %>
+		<% end %>
 	<% end %>
+	</div>
 </div>
 
 
