--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,9 +17,8 @@
   <div class="form-group">
     <%= f.text_area :comment_entry, class: "form-control", placeholder: "Comment Body" %>
   </div>
-  <div class="field cant-see-me">
-    <%= f.number_field :blog_post_id, value: @blog_post.id %>
-    <%= f.number_field :user_id, value: current_user.id %>
+  <div class="field">
+    <%= f.hidden_field :post_id, value: @blog_post.id %>
   </div>
   <div class="actions">
     <%= f.submit %>
