--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,19 +34,13 @@
         <% if user_signed_in? %> 
         	<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
         	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+          <% if can? :update, @blog_post %>
+          <li><%= link_to 'New Post', new_blog_post_path %></li>
+          <% end %>
        	<% else %>
        		<li><%= link_to "Log In", new_user_session_path %></li>
      	<% end %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
